<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#77C41F"
    android:backgroundTint="#43A047">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/appImageID_img"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:contentDescription="@string/appointment_image_description"
                android:paddingRight="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/doc_appointment_68" />

            <TextView
                android:id="@+id/placeID_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/appImageID_img"
                android:hint="@string/place_hint"
                android:textColorHint="#006064"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateID_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeID_Txt"
                android:layout_toEndOf="@+id/appImageID_img"
                android:hint="@string/date_hint"
                android:textColorHint="#006064"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeID_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateID_Txt"
                android:layout_toEndOf="@+id/appImageID_img"
                android:hint="@string/time_hint"
                android:textColorHint="#006064"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doctorID_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeID_Txt"
                android:layout_toEndOf="@+id/appImageID_img"
                android:hint="@string/doctor_hint"
                android:textColorHint="#006064"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commentsID_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctorID_Txt"
                android:layout_toEndOf="@+id/appImageID_img"
                android:hint="@string/comments_hint"
                android:textColorHint="#006064"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteId_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/icon_trash_48"
                android:backgroundTint="#000000"
                android:contentDescription="@string/delete_button_hear"
                android:theme="@style/Button.White" />

            <Button
                android:id="@+id/editId_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/deleteId_btn"
                android:layout_alignParentEnd="true"
                android:background="@drawable/icon_pencil_48"
                android:backgroundTint="#000000"
                android:contentDescription="@string/edit_button_description"
                android:theme="@style/Button.White" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>